--- a/index.html
+++ b/index.html
@@ -28,7 +28,24 @@
                     <h4>HOL</h4>
                 </div>
             </td>
-            <td rowspan="2">2</td>
+            <td rowspan="2">
+                <div class="bandeira">
+                    <img src="sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+            </td>
             <td rowspan="2">3</td>
             <td colspan="2">4</td>
             <td rowspan="2">6</td>
@@ -36,12 +53,46 @@
             <td>8</td>
         </tr>
         <tr>
-            <td>1</td>
+            <td>
+                <div class="bandeira">
+                    <img src="cat.png" alt="CATAR">
+                    <h4>CAT</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="equ.png" alt="">
+                    <h4>EQU</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+            </td>
             <td colspan="2">4</td>
             <td>8</td>
         </tr>
         <tr>
-            <td>1</td>
+            <td>
+                <div class="bandeira">
+                    <img src="cat.png" alt="CATAR">
+                    <h4>CAT</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="equ.png" alt="">
+                    <h4>EQU</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+            </td>
             <td rowspan="2">2</td>
             <td rowspan="2">3</td>
             <td>4</td>
@@ -51,7 +102,24 @@
             <td>8</td>
         </tr>
         <tr>
-            <td>1</td>
+            <td>
+                <div class="bandeira">
+                    <img src="cat.png" alt="CATAR">
+                    <h4>CAT</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="equ.png" alt="">
+                    <h4>EQU</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+            </td>
             <td colspan="2">4</td>
             <td>8</td>
         </tr>
