--- a/index.html
+++ b/index.html
@@ -5,123 +5,307 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
     <table>
         <tr>
-            <td>
+            <td class="alinhar-a-direita">
                 <div class="bandeira">
-                    <img src="cat.png" alt="CATAR">
+                    <img src="images/cat.png" alt="CATAR">
                     <h4>CAT</h4>
                 </div>
                 <div class="bandeira">
-                    <img src="equ.png" alt="">
+                    <img src="images/equ.png" alt="">
                     <h4>EQU</h4>
                 </div>
                 <div class="bandeira">
-                    <img src="sen.png" alt="">
+                    <img src="images/sen.png" alt="">
                     <h4>SEN</h4>
                 </div>
                 <div class="bandeira">
-                    <img src="hol.png" alt="">
+                    <img src="images/hol.png" alt="">
                     <h4>HOL</h4>
                 </div>
             </td>
             <td rowspan="2">
                 <div class="bandeira">
-                    <img src="sen.png" alt="">
+                    <img src="images/sen.png" alt="">
                     <h4>SEN</h4>
                 </div>
                 <div class="bandeira">
-                    <img src="hol.png" alt="">
+                    <img src="images/hol.png" alt="">
                     <h4>HOL</h4>
                 </div>
+                <div class="separador"></div>
                 <div class="bandeira">
-                    <img src="sen.png" alt="">
+                    <img src="images/sen.png" alt="">
                     <h4>SEN</h4>
                 </div>
                 <div class="bandeira">
-                    <img src="hol.png" alt="">
+                    <img src="images/hol.png" alt="">
                     <h4>HOL</h4>
                 </div>
             </td>
-            <td rowspan="2">3</td>
-            <td colspan="2">4</td>
-            <td rowspan="2">6</td>
-            <td rowspan="2">7</td>
-            <td>8</td>
+            <td rowspan="2">
+                <div class="bandeira">
+                    <img src="images/sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+            </td>
+            <td colspan="2"></td>
+            <td rowspan="2">
+                <div class="bandeira">
+                    <img src="images/sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+            </td>
+            <td rowspan="2">
+                <div class="bandeira">
+                    <img src="images/cat.png" alt="CATAR">
+                    <h4>CAT</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/equ.png" alt="">
+                    <h4>EQU</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+            </td>
+            <td>
+                <div class="bandeira">
+                    <img src="images/cat.png" alt="CATAR">
+                    <h4>CAT</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/equ.png" alt="">
+                    <h4>EQU</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+            </td>
         </tr>
         <tr>
             <td>
                 <div class="bandeira">
-                    <img src="cat.png" alt="CATAR">
+                    <img src="images/cat.png" alt="CATAR">
                     <h4>CAT</h4>
                 </div>
                 <div class="bandeira">
-                    <img src="equ.png" alt="">
+                    <img src="images/equ.png" alt="">
                     <h4>EQU</h4>
                 </div>
                 <div class="bandeira">
-                    <img src="sen.png" alt="">
+                    <img src="images/sen.png" alt="">
                     <h4>SEN</h4>
                 </div>
                 <div class="bandeira">
-                    <img src="hol.png" alt="">
+                    <img src="images/hol.png" alt="">
                     <h4>HOL</h4>
                 </div>
             </td>
-            <td colspan="2">4</td>
-            <td>8</td>
+            <td colspan="2">
+                <div class="bandeira">
+                    <img src="images/sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+            </td>
+            <td>
+                <div class="bandeira">
+                    <img src="images/cat.png" alt="CATAR">
+                    <h4>CAT</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/equ.png" alt="">
+                    <h4>EQU</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+            </td>
         </tr>
         <tr>
             <td>
                 <div class="bandeira">
-                    <img src="cat.png" alt="CATAR">
+                    <img src="images/cat.png" alt="CATAR">
                     <h4>CAT</h4>
                 </div>
                 <div class="bandeira">
-                    <img src="equ.png" alt="">
+                    <img src="images/equ.png" alt="">
                     <h4>EQU</h4>
                 </div>
                 <div class="bandeira">
-                    <img src="sen.png" alt="">
+                    <img src="images/sen.png" alt="">
                     <h4>SEN</h4>
                 </div>
                 <div class="bandeira">
-                    <img src="hol.png" alt="">
+                    <img src="images/hol.png" alt="">
                     <h4>HOL</h4>
                 </div>
             </td>
-            <td rowspan="2">2</td>
-            <td rowspan="2">3</td>
-            <td>4</td>
-            <td>5</td>
-            <td rowspan="2">6</td>
-            <td rowspan="2">7</td>
-            <td>8</td>
+            <td rowspan="2">
+                <div class="bandeira">
+                    <img src="images/sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+                <div class="separador"></div>
+                <div class="bandeira">
+                    <img src="images/sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+            </td>
+            <td rowspan="2">
+                <div class="bandeira">
+                    <img src="images/sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+            </td>
+            <td>
+                <div class="bandeira">
+                    <img src="images/sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+            </td>
+            <td>
+                <div class="bandeira">
+                    <img src="images/sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+            </td>
+            <td rowspan="2">
+                <div class="bandeira">
+                    <img src="images/sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+            </td>
+            <td rowspan="2">
+                <div class="bandeira">
+                    <img src="images/cat.png" alt="CATAR">
+                    <h4>CAT</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/equ.png" alt="">
+                    <h4>EQU</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+            </td>
+            <td>
+                <div class="bandeira">
+                    <img src="images/cat.png" alt="CATAR">
+                    <h4>CAT</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/equ.png" alt="">
+                    <h4>EQU</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+            </td>
         </tr>
         <tr>
             <td>
                 <div class="bandeira">
-                    <img src="cat.png" alt="CATAR">
+                    <img src="images/cat.png" alt="CATAR">
                     <h4>CAT</h4>
                 </div>
                 <div class="bandeira">
-                    <img src="equ.png" alt="">
+                    <img src="images/equ.png" alt="">
                     <h4>EQU</h4>
                 </div>
                 <div class="bandeira">
-                    <img src="sen.png" alt="">
+                    <img src="images/sen.png" alt="">
                     <h4>SEN</h4>
                 </div>
                 <div class="bandeira">
-                    <img src="hol.png" alt="">
+                    <img src="images/hol.png" alt="">
                     <h4>HOL</h4>
                 </div>
             </td>
-            <td colspan="2">4</td>
-            <td>8</td>
+            <td colspan="2"></td>
+            <td>
+                <div class="bandeira">
+                    <img src="images/cat.png" alt="CATAR">
+                    <h4>CAT</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/equ.png" alt="">
+                    <h4>EQU</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/sen.png" alt="">
+                    <h4>SEN</h4>
+                </div>
+                <div class="bandeira">
+                    <img src="images/hol.png" alt="">
+                    <h4>HOL</h4>
+                </div>
+            </td>
         </tr>
     </table>
 </body>
