--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
                     <h4>HOL</h4>
                 </div>
             </td>
+
+
             <td colspan="2">
                 <div class="bandeira">
                     <img src="images/sen.png" alt="">
@@ -308,5 +310,6 @@
             </td>
         </tr>
     </table>
+    <img src="images/logo.png" alt="Logo da copa">
 </body>
 </html>
